--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,7 @@ body{
 }
 
 h1,
+h2,
 h3,
 h4,
 h5,
@@ -23,8 +24,14 @@ h1{
     font-size: 46px;
 }
 
+h2{
+    font-size: 34px;
+}
+
 p{
     font-weight: normal;
+    font-size: 16px;
+    line-height: 30px;
 }
 
 .hero{
@@ -41,7 +48,7 @@ p{
 }
 
 .hero h2{
-    font-family: var(--default-font-family);
+    font-family: var(--heading-font-family);
     font-weight: normal;
     line-height: 2;
     font-size: 24px;
@@ -54,6 +61,26 @@ p{
     font-size: 18px;
     line-height: 27px;
     padding: 15px 30px;
+}
+
+.btn-branding-outline{
+    color: var(--branding-color);
+    border: 1px solid var(--branding-color);
+    border-radius: 4px;
+    font-size: 18px;
+    line-height: 27px;
+    padding: 15px 30px;
+}
+
+.project-description{
+    padding: 120px 60px;
+}
+
+@media (max-width: 960px) {
+    .project-description {
+        padding: 0;
+        text-align: center;
+    }
 }
 
 
