--- a/src/style.css
+++ b/src/style.css
@@ -134,4 +134,29 @@ img{
     width: 80%;
 }
 
+@media (min-width) {
+    h1 {
+        font-size: 44px;
+        line-height: 56px;
+    }
+
+    h2 {
+        font-size: 44px;
+    }
+
+    .hero{
+        padding: 80px 20px;
+    }
+
+    .project-description {
+        padding: 0;
+        text-align: center;
+    }
+
+    .content {
+        text-align: center;
+        padding: 0;
+    }
+}
+
 
