--- a/src/style.css
+++ b/src/style.css
@@ -134,7 +134,7 @@ img{
     width: 80%;
 }
 
-@media (min-width) {
+@media (min-width: 1200px) {
     h1 {
         font-size: 44px;
         line-height: 56px;
